--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -5,13 +5,13 @@ environment:
     - PYTHON: "C:\\Python36-x64"
 
 install:
-  - "%PYTHON%\\python.exe -m pip install -r requirements.txt --target Lib"
+  - "%PYTHON%\\python.exe -m pip install -r requirements.txt --target ."
 
 version: '0.0.1+{build}'
 
 build_script:
   - ps: Compress-Archive -Path app.py -DestinationPath "allin-injectplot-${Env:APPVEYOR_BUILD_VERSION}.zip"
-  - ps: Compress-Archive -Path start_server.bat -DestinationPath "allin-injectplot-${Env:APPVEYOR_BUILD_VERSION}.zip"
+  - ps: Compress-Archive -Path start_server.bat -Update -DestinationPath "allin-injectplot-${Env:APPVEYOR_BUILD_VERSION}.zip"
   - ps: Compress-Archive -Path LICENSE -Update -DestinationPath "allin-injectplot-${Env:APPVEYOR_BUILD_VERSION}.zip"
   - ps: Compress-Archive -Path injects -Update -DestinationPath "allin-injectplot-${Env:APPVEYOR_BUILD_VERSION}.zip"
   - ps: Compress-Archive -Path static -Update -DestinationPath "allin-injectplot-${Env:APPVEYOR_BUILD_VERSION}.zip"
@@ -20,7 +20,7 @@ build_script:
   - ps: Invoke-WebRequest -Uri "https://www.python.org/ftp/python/3.6.5/python-3.6.5-embed-win32.zip" -OutFile python36.zip
   - ps: Expand-Archive -Path python36.zip -DestinationPath python36
   - ps: Compress-Archive -Path python36 -Update -DestinationPath "allin-injectplot-${Env:APPVEYOR_BUILD_VERSION}.zip"
-  - ps: Compress-Archive -Path Lib\* -Update -DestinationPath "allin-injectplot-${Env:APPVEYOR_BUILD_VERSION}.zip"
+  - python36\python.exe app.py
 
 artifacts:
   - path: 'allin-injectplot-%APPVEYOR_BUILD_VERSION%.zip'
